WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171352
Should not drag x-apple-data-detectors links
https://bugs.webkit.org/show_bug.cgi?id=171352
Summary
Should not drag x-apple-data-detectors links
Tim Horton
Reported
2017-04-26 16:30:25 PDT
Should not drag x-apple-data-detectors links
Attachments
Patch
(6.96 KB, patch)
2017-04-26 16:32 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.38 KB, patch)
2017-04-26 16:44 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-04-26 16:32:13 PDT
Created
attachment 308305
[details]
Patch
Tim Horton
Comment 2
2017-04-26 16:44:13 PDT
Created
attachment 308306
[details]
Patch
Tim Horton
Comment 3
2017-04-26 17:53:47 PDT
https://trac.webkit.org/changeset/215847/webkit
Tim Horton
Comment 4
2017-04-26 18:03:50 PDT
Actually
https://trac.webkit.org/changeset/215849/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug