Should not drag x-apple-data-detectors links https://bugs.webkit.org/show_bug.cgi?id=171352 <rdar://problem/31309081>

Reviewed by Beth Dakin.

Test: fast/events/do-not-drag-and-drop-data-detectors-link.html

These links are only meaningful in the context of the original document,
so they should not be draggable.

* editing/cocoa/DataDetection.h:
* editing/cocoa/DataDetection.mm:
(WebCore::DataDetection::dataDetectorURLProtocol):
(WebCore::DataDetection::isDataDetectorURL):
* page/DragController.cpp:
(WebCore::isDraggableLink):
Disallow dragging of <a href="x-apple-data-detectors://..."> links.

* fast/events/do-not-drag-and-drop-data-detectors-link-expected.txt: Added.
* fast/events/do-not-drag-and-drop-data-detectors-link.html: Added.


Canonical link: https://commits.webkit.org/188243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215847 268f45cc-cd09-0410-ab3c-d52691b4dbfc